# inbound

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  pyproject.toml  setup.py  test.py
.github/workflows/: check_on_push.yml  inbound-image.yaml  publish-to-pypi.yml  publish-to-test-pypi.yml
inbound/: .dockerignore  LICENSE.txt  README.md  auth.sh  docker-compose.yml  mappers.py  snowbird.yml
inbound/core/: job.py  job_management.py  models.py
inbound/highwatermarks/: snowflake.py
inbound/inbound/: mappers.py
inbound/inbound/core/: models.py
inbound/inbound/highwatermarks/: oracle.py
inbound/inbound/sdk/: highwatermark.py  mapper.py  utils.py
inbound/inbound/sinks/: csv.py
inbound/jobs/: anaplan.py  oebs.py
inbound/sdk/: mapper.py  sink.py  tap.py
inbound/sinks/: csv.py  snowflake.py
inbound/taps/: anaplan.py  mainmanager.py  mssql.py  oracle.py
infrastructure/: snowflake.yml
kake/: auth.sh  mappers.py
kake/core/: job.py  job_management.py  secrets.py
kake/sdk/: sink.py  tap.py
kake/taps/: anaplan.py  oracle.py
tests/: conftest.py
tests/data/: duckdb  test.csv  test.duckdb  test_jobrunner.csv  test_long.csv
tests/dbt/: profiles.yml
tests/e2e/: test_metadata.py
tests/inbound/: inbound_project.yml
tests/integration/: docker-compose.yml  test_anaplan.py  test_mssql.py  test_ora.py  test_ora_to_snow.py  test_snow.py
tests/unit/: test_anaplan_auth.py  test_cli.py  test_csv_ingest.py  test_csv_to_duckdb_to_sqlite_to_csv.py  test_dbt_profile.py  test_duckdb.py  test_get_query_list.py  test_job.py  test_job_id.py  test_job_management.py  test_job_status.py  test_jobs_file_parser.py  test_mappers.py  test_snow_sink.py  test_sqlalchemy.py  test_transform.py
tests/unit_tests/: test_all_jobs.py  test_cli.py  test_csv.py  test_csv_to_duckdb.py  test_csv_to_duckdb_to_sqlite_to_csv.py  test_dbt_artifacts.py  test_dbt_profile.py  test_duckdb.py  test_excel.py  test_job_id.py  test_job_runner.py  test_lineage.py  test_models.py  test_settings.py  test_setup.py  test_soda_profile.py
tests/utils/: dataframes.py  git_checkout.py
(+53 files in other folders)
