[tool.poetry]
name = "inbound"
version = "0.0.1"
description = "Inbound testing"
authors = [ "Virksomhetsdatalaget <virksomhetsdatalaget@nav.no>", ]

[tool.poetry.dependencies]
python = "^3.10.0"
inbound-core = { version = "0.0.1" }
inbound-file = { version = "0.0.1" }
inbound-gcs = { version = "0.0.1" }
inbound-duckdb = { version = "0.0.1" }
inbound-sqlalchemy = { version = "0.0.1" }
inbound-bigquery = { version = "0.0.1" }
inbound-oracle = { version = "0.0.1" }
inbound-postgres = { version = "0.0.1" }
inbound-snowflake = { version = "0.0.1" }

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-cov = "4.0.0"
click = "8.1.3"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.16.3"
pyright = "^1.1.296"

inbound-core = { path="./packages/core", develop=true }
inbound-file = { path="./packages/file", develop=true }
inbound-gcs = { path="./packages/gcs", develop=true }
inbound-duckdb = { path="./packages/duckdb", develop=true }
inbound-sqlalchemy = { path="./packages/sqlalchemy", develop=true }
inbound-bigquery = { path="./packages/bigquery", develop=true }
inbound-oracle = { path="./packages/oracle", develop=true }
inbound-snowflake = { path="./packages/snowflake", develop=true }
inbound-postgres = { path="./packages/postgres", develop=true }

[tool.pytest.ini_options]
pythonpath = [".", "inbound"]
filterwarnings = ["ignore::DeprecationWarning"]

[tools.pyright]
reportMissingTypeArgument = true
strictListInference = true

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
  | tests/data
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = ["packages", "tests"]

[tool.coverage.paths]
source = ["*/inbound/*"]

[tool.coverage.run]
branch = true
source = ["packages"]

[tool.coverage.report]
fail_under = 100
show_missing = true
omit = []
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]